--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,36 @@
  */
 
 @import "semantic-ui";
+
+.no.padding{
+  padding: 0px !important;
+}
+
+.no.margin{
+  margin: 0px !important;
+}
+
+.move.right{
+  float: right;
+}
+
+.clearfix {
+    overflow: auto;
+}
+
+.clearfix:after {
+    content:"";
+    display:block;
+    clear:both;
+}
+
+.red-btn{
+  width: 203px;
+	height: 50px;
+	border-radius: 2px;
+	background-color: #ff5a5f;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  color: #ffffff;
+}
