Add controller tests for companies

--- a/app/views/companies/_company_listing.html.slim
+++ b/app/views/companies/_company_listing.html.slim
@@ -5,10 +5,10 @@
         = image_tag company.logo.url(:thumb)
       .content
         p.header = company.name
-        / p.meta
-        /   = company.address.city
-        /   | ,&nbsp;
-        /   = company.address.state
+        p.meta
+          = company.address.city
+          | ,&nbsp;
+          = company.address.state
         / #average-rating.rating-catergory
         /   #average_star.ui.star.rating
         /   p.description  
