--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -25,7 +25,7 @@ section#company-section
           .eight.wide.column
             p 
               i.location.arrow.icon
-/               / = "#{@company.address.city}, #{@company.address.state}"
+              = "#{@company.address.city}, #{@company.address.state}"
 /       .intern-job
 /         .ui.centered.grid.no.margin
 /           .four.wide.computer.eight.wide.tablet.column.intern-desc-title
