--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -98,33 +98,33 @@ section#company-section
 /               p Management
 /               div.ui.star.rating.move-left#management_star
 / 
-/ 
-/       .action-area
-/         = link_to edit_company_path(@company.id) do 
-/           .big-btn
-/             p Edit Company
-/         = link_to new_company_job_path(@company.id) do
-/           .big-btn
-/             p Add New Job
-/         = link_to companies_path do
-/           .big-btn
-/             p Back to Menu
-/     .six.wide.tablet.six.wide.computer.column
-/       .contact-box
-/         .contact-person
-/           - if @company.contact.nil?
-/             p Adding contact person and start approach by students
-/             = link_to new_company_contact_path(@company.id) do 
-/               .add-contact-btn
-/                 p Add Contact Person
-/           - else
-/             .ui.grid
-/               .six.wide.column
-/                 = image_tag @company.contact.avatar.url(:thumb)
-/               .ten.wide.column.contact-detail
-/                 p.contact-name = @company.contact.name
-/                 p = @company.contact.role
-/                 = link_to "Edit Contact Person", edit_contact_path(@company.id, @company.contact.id)
+
+      .action-area
+        = link_to edit_company_path(@company.id) do 
+          .big-btn
+            p Edit Company
+        = link_to new_company_job_path(@company.id) do
+          .big-btn
+            p Add New Job
+        = link_to companies_path do
+          .big-btn
+            p Back to Menu
+    .six.wide.tablet.six.wide.computer.column
+      .contact-box
+        .contact-person
+          - if @company.contact.nil?
+            p Adding contact person and start approach by students
+            = link_to new_company_contact_path(@company.id) do 
+              .add-contact-btn
+                p Add Contact Person
+          - else
+            .ui.grid
+              .six.wide.column
+                = image_tag @company.contact.avatar.url(:thumb)
+              .ten.wide.column.contact-detail
+                p.contact-name = @company.contact.name
+                p = @company.contact.role
+                = link_to "Edit Contact Person", edit_contact_path(@company.id, @company.contact.id)
 /         .application
 /           p Apply now and get a chance for interview session
 /           a.apply-btn href="#" Apply Now
