Add the jobs views

--- a/app/views/companies/_jobs_list.html.slim
+++ b/app/views/companies/_jobs_list.html.slim
@@ -3,7 +3,7 @@ hr
  div
    p = job.name
    p = truncate(job.description, length: 150)
-   p = job.working_hour
+   p = job.working_hours
    p = job.dress_code
    p = job.all_scopes
    p = job.welfare.allowance
