--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -7,11 +7,11 @@
 					a.item Home
 					a.item Messages 
 					a.item Friends
-					/ - if current_user
-					/ 	= link_to "Logout", destroy_user_session_path, method: "delete", class: 'ui item'
-					/ - else
-					/ 	= link_to "Sign in", new_user_session_path, class: 'ui item'
-					/ 	= link_to "Sign up", new_user_registration_path, class: 'ui item'	
+					- if current_user
+						= link_to "Logout", destroy_user_session_path, method: "delete", class: 'ui item'
+					- else
+						= link_to "Sign in", new_user_session_path, class: 'ui item'
+						= link_to "Sign up", new_user_registration_path, class: 'ui item'	
 		.ui.centered.grid.jumbotron
 			.sixteen.wide.mobile.sixteen.wide.tablet.nine.wide.computer.column
 				.ui.embed.video
