--- a/app/views/companies/_company_listing.html.slim
+++ b/app/views/companies/_company_listing.html.slim
@@ -9,16 +9,16 @@
           = company.address.city
           | ,&nbsp;
           = company.address.state
-        / #average-rating.rating-catergory
-        /   #average_star.ui.star.rating
-        /   p.description  
-        /     = company.ratings.count 
-        /     | &nbsp;reviews
-        / javascript:
-        /   $('#average_star')
-        /     .rating({
-        /       initialRating: #{company.average_rating.to_i},
-        /       maxRating: 5,
-        /       interactive: false
-        /     })
-        /   ;
+        #average-rating.rating-catergory
+          #average_star.ui.star.rating
+          p.description  
+            = company.ratings.count 
+            | &nbsp;reviews
+        javascript:
+          $('#average_star')
+            .rating({
+              initialRating: #{company.average_rating.to_i},
+              maxRating: 5,
+              interactive: false
+            })
+          ;
