--- a/app/views/companies/show.html.slim
+++ b/app/views/companies/show.html.slim
@@ -72,8 +72,31 @@ section#company-section
                   = link_to job, class: "jobs_link" do
                     .more-jobs.card-shadow
                       p = job.name
-
-
+        .intern-job-rating
+          #average-rating.rating-catergory
+            p 
+              = @ratings.count
+              | &nbsp;Reviews
+            div.ui.star.rating#average_star
+          .ui.grid.no.margin
+            .rating-catergory.eight.wide.column
+              p Culture
+              div.ui.star.rating.move-left#culture_star
+            .rating-catergory.eight.wide.column
+              p Environment
+              div.ui.star.rating.move-left#environment_star
+            .rating-catergory.eight.wide.column
+              p Cleanliness
+              div.ui.star.rating.move-left#cleanliness_star
+            .rating-catergory.eight.wide.column
+              p Location
+              div.ui.star.rating.move-left#location_star
+            .rating-catergory.eight.wide.column
+              p Learning
+              div.ui.star.rating.move-left#learning_star
+            .rating-catergory.eight.wide.column
+              p Management
+              div.ui.star.rating.move-left#management_star
 
       .action-area
         = link_to edit_company_path(@company.id) do 
@@ -117,109 +140,109 @@ section#company-section
               p Twitter
             .column.social-btn.insta
               p Instagram
-/  
-/ javascript:
-/   $('#average_star')
-/     .rating({
-/       initialRating: #{@company.average_rating.to_i},
-/       maxRating: 5,
-/       interactive: false
-/     })
-/   ;
-/   
-/   $('#culture_star')
-/     .rating({
-/       initialRating: #{@company.average_culture_rating.to_i},
-/       maxRating: 5,
-/       interactive: #{user_signed_in?},
-/       clearable: #{user_signed_in?},
-/       onRate(value) {
-/         $.ajax({
-/           url: '/ratings/' + "#{@rating.id}",
-/           type: 'PATCH',
-/           data: { score: value, type: 'culture' }
-/         });
-/       }
-/     })
-/   ;
-/   
-/   $('#environment_star')
-/     .rating({
-/       initialRating: #{@company.average_environment_rating.to_i},
-/       maxRating: 5,
-/       interactive: #{user_signed_in?},
-/       clearable: #{user_signed_in?},
-/       onRate(value) {
-/         $.ajax({
-/           url: '/ratings/' + "#{@rating.id}",
-/           type: 'PATCH',
-/           data: { score: value, type: 'environment' }
-/         });
-/       }
-/     })
-/   ;
-/   
-/   $('#cleanliness_star')
-/     .rating({
-/       initialRating: #{@company.average_cleanliness_rating.to_i},
-/       maxRating: 5,
-/       interactive: #{user_signed_in?},
-/       clearable: #{user_signed_in?},
-/       onRate(value) {
-/         $.ajax({
-/           url: '/ratings/' + "#{@rating.id}",
-/           type: 'PATCH',
-/           data: { score: value, type: 'cleanliness' }
-/         });
-/       }
-/     })
-/   ;
-/   
-/   $('#location_star')
-/     .rating({
-/       initialRating: #{@company.average_location_rating.to_i},
-/       maxRating: 5,
-/       interactive: #{user_signed_in?},
-/       clearable: #{user_signed_in?},
-/       onRate(value) {
-/         $.ajax({
-/           url: '/ratings/' + "#{@rating.id}",
-/           type: 'PATCH',
-/           data: { score: value, type: 'location' }
-/         });
-/       }
-/     })
-/   ;
-/   
-/   $('#learning_star')
-/     .rating({
-/       initialRating: #{@company.average_learning_rating.to_i},
-/       maxRating: 5,
-/       interactive: #{user_signed_in?},
-/       clearable: #{user_signed_in?},
-/       onRate(value) {
-/         $.ajax({
-/           url: '/ratings/' + "#{@rating.id}",
-/           type: 'PATCH',
-/           data: { score: value, type: 'learning' }
-/         });
-/       }
-/     })
-/   ;
-/   
-/   $('#management_star')
-/     .rating({
-/       initialRating: #{@company.average_management_rating.to_i},
-/       maxRating: 5,
-/       interactive: #{user_signed_in?},
-/       clearable: #{user_signed_in?},
-/       onRate(value) {
-/         $.ajax({
-/           url: '/ratings/' + "#{@rating.id}",
-/           type: 'PATCH',
-/           data: { score: value, type: 'management' }
-/         });
-/       }
-/     })
-/   ;
-/         
+ 
+javascript:
+  $('#average_star')
+    .rating({
+      initialRating: #{@company.average_rating.to_i},
+      maxRating: 5,
+      interactive: false
+    })
+  ;
+  
+  $('#culture_star')
+    .rating({
+      initialRating: #{@company.average_culture_rating.to_i},
+      maxRating: 5,
+      interactive: #{user_signed_in?},
+      clearable: #{user_signed_in?},
+      onRate(value) {
+        $.ajax({
+          url: '/ratings/' + "#{@rating.id}",
+          type: 'PATCH',
+          data: { score: value, type: 'culture' }
+        });
+      }
+    })
+  ;
+  
+  $('#environment_star')
+    .rating({
+      initialRating: #{@company.average_environment_rating.to_i},
+      maxRating: 5,
+      interactive: #{user_signed_in?},
+      clearable: #{user_signed_in?},
+      onRate(value) {
+        $.ajax({
+          url: '/ratings/' + "#{@rating.id}",
+          type: 'PATCH',
+          data: { score: value, type: 'environment' }
+        });
+      }
+    })
+  ;
+  
+  $('#cleanliness_star')
+    .rating({
+      initialRating: #{@company.average_cleanliness_rating.to_i},
+      maxRating: 5,
+      interactive: #{user_signed_in?},
+      clearable: #{user_signed_in?},
+      onRate(value) {
+        $.ajax({
+          url: '/ratings/' + "#{@rating.id}",
+          type: 'PATCH',
+          data: { score: value, type: 'cleanliness' }
+        });
+      }
+    })
+  ;
+  
+  $('#location_star')
+    .rating({
+      initialRating: #{@company.average_location_rating.to_i},
+      maxRating: 5,
+      interactive: #{user_signed_in?},
+      clearable: #{user_signed_in?},
+      onRate(value) {
+        $.ajax({
+          url: '/ratings/' + "#{@rating.id}",
+          type: 'PATCH',
+          data: { score: value, type: 'location' }
+        });
+      }
+    })
+  ;
+  
+  $('#learning_star')
+    .rating({
+      initialRating: #{@company.average_learning_rating.to_i},
+      maxRating: 5,
+      interactive: #{user_signed_in?},
+      clearable: #{user_signed_in?},
+      onRate(value) {
+        $.ajax({
+          url: '/ratings/' + "#{@rating.id}",
+          type: 'PATCH',
+          data: { score: value, type: 'learning' }
+        });
+      }
+    })
+  ;
+  
+  $('#management_star')
+    .rating({
+      initialRating: #{@company.average_management_rating.to_i},
+      maxRating: 5,
+      interactive: #{user_signed_in?},
+      clearable: #{user_signed_in?},
+      onRate(value) {
+        $.ajax({
+          url: '/ratings/' + "#{@rating.id}",
+          type: 'PATCH',
+          data: { score: value, type: 'management' }
+        });
+      }
+    })
+  ;
+        
