Modify company js

--- a/app/views/companies/new.html.slim
+++ b/app/views/companies/new.html.slim
@@ -2,7 +2,7 @@
 	.sixteen.wide.mobile.eight.wide.tablet.eight.wide.computer.column.create_company_form.no.padding
 		= simple_form_for @company, html: {multipart: true, class: "company-form ui form clearfix"} do |form|
 			.field.upload-field
-				a.upload-btn onclick="getFile()"
+				a.upload-btn
 					.teal-btn
 						i.large.cloud.upload.icon
 						| Upload Company Logo
